[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/bloom.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/level_select_scene.gd" type="Script" id=2]
[ext_resource path="res://Scenes/options_panel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/Roboto-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Sprites/options.png" type="Texture" id=5]
[ext_resource path="res://Scripts/game_background.gd" type="Script" id=7]
[ext_resource path="res://Sprites/star.png" type="Texture" id=8]
[ext_resource path="res://Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Scenes/low_score_panel.tscn" type="PackedScene" id=10]
[ext_resource path="res://Sprites/op3.png" type="Texture" id=11]
[ext_resource path="res://Scripts/level_set.gd" type="Script" id=12]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 9 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 576.0
expand = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_bottom = 588.0
rect_min_size = Vector2( 1024, 0 )
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSet" type="Container" parent="ScrollContainer"]
margin_right = 2048.0
margin_bottom = 576.0
rect_min_size = Vector2( 2048, 576 )
rect_clip_content = true
mouse_filter = 1
script = ExtResource( 12 )

[node name="Label" type="Label" parent="."]
margin_left = 53.8174
margin_top = 36.9995
margin_right = 240.817
margin_bottom = 121.999
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.94902, 0.94902, 0.94902, 1 )
text = "Rotas"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreButton" type="TextureButton" parent="."]
margin_left = 819.0
margin_top = 30.0
margin_right = 899.0
margin_bottom = 110.0
rect_min_size = Vector2( 80, 80 )
texture_normal = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="TextureButton" parent="."]
margin_left = 914.0
margin_top = 30.0
margin_right = 994.0
margin_bottom = 110.0
rect_min_size = Vector2( 80, 80 )
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Star" type="TextureRect" parent="."]
margin_left = 34.0
margin_top = 520.0
margin_right = 58.0
margin_bottom = 552.0
rect_min_size = Vector2( 24, 24 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarCounter" type="Label" parent="."]
margin_left = 68.0
margin_top = 523.0
margin_right = 106.0
margin_bottom = 552.0
custom_fonts/font = SubResource( 2 )
text = "#/4"
valign = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsPanel" parent="." instance=ExtResource( 3 )]

[node name="PanelContainer" parent="OptionsPanel/CenterContainer" index="0"]
margin_top = 33.0
margin_bottom = 543.0

[node name="ColorPanel" parent="OptionsPanel/CenterContainer/PanelContainer" index="0"]
margin_bottom = 506.0

[node name="MarginContainer2" parent="OptionsPanel/CenterContainer/PanelContainer" index="1"]
margin_bottom = 506.0

[node name="VBoxContainer" parent="OptionsPanel/CenterContainer/PanelContainer/MarginContainer2" index="0"]
margin_bottom = 482.0

[node name="ScrollContainer" parent="OptionsPanel/CenterContainer/PanelContainer/MarginContainer2/VBoxContainer" index="1"]
margin_bottom = 462.0

[node name="VBoxContainer" parent="OptionsPanel/CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/ScrollContainer" index="0"]
margin_bottom = 376.0

[node name="PanelContainer" parent="OptionsPanel/CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/ScrollContainer/VBoxContainer" index="5"]
visible = false

[node name="LowScorePanel" parent="." instance=ExtResource( 10 )]

[node name="Bloom" parent="." instance=ExtResource( 1 )]
[connection signal="gui_input" from="ScrollContainer" to="." method="_on_ScrollContainer_gui_input"]
[connection signal="pressed" from="ScoreButton" to="." method="_on_ScoreButton_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]

[editable path="OptionsPanel"]
